cbits/Bullet.h

void btPersistentManifold_replaceContactPoint(void *c,void* p0,int p1); //method: replaceContactPoint void ( ::btPersistentManifold::* )( ::btManifoldPoint const &,int ) 
void btPersistentManifold_clearUserCache(void *c,void* p0); //method: clearUserCache void ( ::btPersistentManifold::* )( ::btManifoldPoint & ) 
void* btPersistentManifold_getBody1(void *c); //method: getBody1 void * ( ::btPersistentManifold::* )(  ) 
void* btPersistentManifold_getBody10(void *c); //method: getBody1 void * ( ::btPersistentManifold::* )(  ) 
//not supported method: getBody1 void const * ( ::btPersistentManifold::* )(  ) const
// error:  - unsupported

float btPersistentManifold_getContactProcessingThreshold(void *c); //method: getContactProcessingThreshold ::btScalar ( ::btPersistentManifold::* )(  ) const
void btPersistentManifold_clearManifold(void *c); //method: clearManifold void ( ::btPersistentManifold::* )(  ) 
int btPersistentManifold_getNumContacts(void *c); //method: getNumContacts int ( ::btPersistentManifold::* )(  ) const
void* btPersistentManifold_getBody0(void *c); //method: getBody0 void * ( ::btPersistentManifold::* )(  ) 
void* btPersistentManifold_getBody00(void *c); //method: getBody0 void * ( ::btPersistentManifold::* )(  ) 
//not supported method: getBody0 void const * ( ::btPersistentManifold::* )(  ) const
// error:  - unsupported

int btPersistentManifold_addManifoldPoint(void *c,void* p0); //method: addManifoldPoint int ( ::btPersistentManifold::* )( ::btManifoldPoint const & ) 
int btPersistentManifold_getCacheEntry(void *c,void* p0); //method: getCacheEntry int ( ::btPersistentManifold::* )( ::btManifoldPoint const & ) const
int btPersistentManifold_validContactDistance(void *c,void* p0); //method: validContactDistance bool ( ::btPersistentManifold::* )( ::btManifoldPoint const & ) const
void btPersistentManifold_removeContactPoint(void *c,int p0); //method: removeContactPoint void ( ::btPersistentManifold::* )( int ) 
void* btPersistentManifold_getContactPoint(void *c,int p0); //method: getContactPoint ::btManifoldPoint const & ( ::btPersistentManifold::* )( int ) const
void* btPersistentManifold_getContactPoint0(void *c,int p0); //method: getContactPoint ::btManifoldPoint const & ( ::btPersistentManifold::* )( int ) const
void* btPersistentManifold_getContactPoint1(void *c,int p0); //method: getContactPoint ::btManifoldPoint & ( ::btPersistentManifold::* )( int ) 
void btPersistentManifold_refreshContactPoints(void *c,float* p0,float* p1); //method: refreshContactPoints void ( ::btPersistentManifold::* )( ::btTransform const &,::btTransform const & ) 
float btPersistentManifold_getContactBreakingThreshold(void *c); //method: getContactBreakingThreshold ::btScalar ( ::btPersistentManifold::* )(  ) const
void btPersistentManifold_m_companionIdA_set(void *c,int a); //attribute: int btPersistentManifold->m_companionIdA
int btPersistentManifold_m_companionIdA_get(void *c); //attribute: int btPersistentManifold->m_companionIdA
void btPersistentManifold_m_companionIdB_set(void *c,int a); //attribute: int btPersistentManifold->m_companionIdB
int btPersistentManifold_m_companionIdB_get(void *c); //attribute: int btPersistentManifold->m_companionIdB
void btPersistentManifold_m_index1a_set(void *c,int a); //attribute: int btPersistentManifold->m_index1a
int btPersistentManifold_m_index1a_get(void *c); //attribute: int btPersistentManifold->m_index1a
void btStorageResult_addContactPoint(void *c,float* p0,float* p1,float p2); //method: addContactPoint void ( ::btStorageResult::* )( ::btVector3 const &,::btVector3 const &,::btScalar ) 