Physics/Bullet/Raw/BulletCollision/NarrowPhaseCollision.chs

{#fun btPersistentManifold_replaceContactPoint as btPersistentManifold_replaceContactPoint    `( BtPersistentManifoldClass bc , BtManifoldPointClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ newPoint
,  `Int'  -- ^ insertIndex
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h?r=2223#106>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp?r=2223>
-}
{#fun btPersistentManifold_clearUserCache as btPersistentManifold_clearUserCache    `( BtPersistentManifoldClass bc , BtManifoldPointClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ pt
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h?r=2223#95>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp?r=2223>
-}
{#fun btPersistentManifold_getBody10 as btPersistentManifold_getBody1    `( BtPersistentManifoldClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `VoidPtr'  mkVoidPtr* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h?r=2223#95>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp?r=2223>
-}
{#fun btPersistentManifold_getBody10 as btPersistentManifold_getBody10    `( BtPersistentManifoldClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `VoidPtr'  mkVoidPtr* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h?r=2223#129>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp?r=2223>
-}
{#fun btPersistentManifold_getContactProcessingThreshold as btPersistentManifold_getContactProcessingThreshold    `( BtPersistentManifoldClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h?r=2223#209>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp?r=2223>
-}
{#fun btPersistentManifold_clearManifold as btPersistentManifold_clearManifold    `( BtPersistentManifoldClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h?r=2223#112>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp?r=2223>
-}
{#fun btPersistentManifold_getNumContacts as btPersistentManifold_getNumContacts    `( BtPersistentManifoldClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h?r=2223#94>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp?r=2223>
-}
{#fun btPersistentManifold_getBody00 as btPersistentManifold_getBody0    `( BtPersistentManifoldClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `VoidPtr'  mkVoidPtr* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h?r=2223#94>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp?r=2223>
-}
{#fun btPersistentManifold_getBody00 as btPersistentManifold_getBody00    `( BtPersistentManifoldClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `VoidPtr'  mkVoidPtr* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h?r=2223#136>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp?r=2223>
-}
{#fun btPersistentManifold_addManifoldPoint as btPersistentManifold_addManifoldPoint    `( BtPersistentManifoldClass bc , BtManifoldPointClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ newPoint
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h?r=2223#134>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp?r=2223>
-}
{#fun btPersistentManifold_getCacheEntry as btPersistentManifold_getCacheEntry    `( BtPersistentManifoldClass bc , BtManifoldPointClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ newPoint
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h?r=2223#201>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp?r=2223>
-}
{#fun btPersistentManifold_validContactDistance as btPersistentManifold_validContactDistance    `( BtPersistentManifoldClass bc , BtManifoldPointClass p0 )' =>     { withBt* `bc'  -- ^ 
, withBt* `p0'  -- ^ pt
 } ->  `Bool'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h?r=2223#138>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp?r=2223>
-}
{#fun btPersistentManifold_removeContactPoint as btPersistentManifold_removeContactPoint    `( BtPersistentManifoldClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ index
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h?r=2223#114>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp?r=2223>
-}
{#fun btPersistentManifold_getContactPoint0 as btPersistentManifold_getContactPoint    `( BtPersistentManifoldClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ index
 } ->  `BtManifoldPoint'  mkBtManifoldPoint* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h?r=2223#114>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp?r=2223>
-}
{#fun btPersistentManifold_getContactPoint0 as btPersistentManifold_getContactPoint0    `( BtPersistentManifoldClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ index
 } ->  `BtManifoldPoint'  mkBtManifoldPoint* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h?r=2223#120>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp?r=2223>
-}
{#fun btPersistentManifold_getContactPoint1 as btPersistentManifold_getContactPoint1    `( BtPersistentManifoldClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Int'  -- ^ index
 } ->  `BtManifoldPoint'  mkBtManifoldPoint* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h?r=2223#206>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp?r=2223>
-}
{#fun btPersistentManifold_refreshContactPoints as btPersistentManifold_refreshContactPoints    `( BtPersistentManifoldClass bc )' =>     { withBt* `bc'  -- ^ 
, withTransform* `Transform'  peekTransform* -- ^ trA
, withTransform* `Transform'  peekTransform* -- ^ trB
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h?r=2223#206>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp?r=2223>
-}
{#fun btPersistentManifold_refreshContactPoints as btPersistentManifold_refreshContactPoints'    `( BtPersistentManifoldClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaTransform-  `Transform'  peekTransform* -- ^ trA
, allocaTransform-  `Transform'  peekTransform* -- ^ trB
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h?r=2223#127>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp?r=2223>
-}
{#fun btPersistentManifold_getContactBreakingThreshold as btPersistentManifold_getContactBreakingThreshold    `( BtPersistentManifoldClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h?r=2223#79>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp?r=2223>
-}
{#fun btPersistentManifold_m_companionIdA_set    `( BtPersistentManifoldClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h?r=2223#79>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp?r=2223>
-}
{#fun btPersistentManifold_m_companionIdA_get    `( BtPersistentManifoldClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h?r=2223#80>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp?r=2223>
-}
{#fun btPersistentManifold_m_companionIdB_set    `( BtPersistentManifoldClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h?r=2223#80>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp?r=2223>
-}
{#fun btPersistentManifold_m_companionIdB_get    `( BtPersistentManifoldClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h?r=2223#82>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp?r=2223>
-}
{#fun btPersistentManifold_m_index1a_set    `( BtPersistentManifoldClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.h?r=2223#82>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btPersistentManifold.cpp?r=2223>
-}
{#fun btPersistentManifold_m_index1a_get    `( BtPersistentManifoldClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
-- * btStorageResult
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.h?r=2223#79>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btDiscreteCollisionDetectorInterface.cpp?r=2223>
-}
{#fun btStorageResult_addContactPoint as btStorageResult_addContactPoint    `( BtStorageResultClass bc )' =>     { withBt* `bc'  -- ^ 
, withVec3* `Vec3'  peekVec3* -- ^ normalOnBInWorld
, withVec3* `Vec3'  peekVec3* -- ^ pointInWorld
,  `Float'  -- ^ depth
 } ->  `()'   #}
